# fakemon-forge

./: .gitignore  LICENSE  README.md  pyproject.toml
fakemon_forge/: cli.py  generator.py  main.py  sprites.py  vision.py  writer.py
tests/: test_cli.py  test_generator.py  test_main.py  test_sprites.py  test_vision.py  test_writer.py
