[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fakemon-forge"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mistralai>=1.0.0",
    "diffusers>=0.27.0",
    "transformers>=4.40.0",
    "accelerate>=0.29.0",
    "Pillow>=10.0.0",
    "torch>=2.2.0",
    "compel>=2.0.0",
]

[project.scripts]
fakemon-forge = "fakemon_forge.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
